<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Timetable</string>

    <string name="version_info_activity_title">关于</string>
    <string name="version_info_simple">v0.4.3.20170308 alpha</string>
    <string name="version_info_title">更新要点</string>
    <string name="version_info_detail">1.更新了UI设计</string>
    <string name="version_info_author">Coder : W.eR1c.H</string>
    <string name="version_info_authors">Thx : Kenny</string>

    <!--首页-->
    <string name="title_activity_query_class_table">Query</string>

    <!--查询Activity-->
    <string name="query_class_table_title">查询</string>
    <string name="query_class_table_button">查询</string>
    <string name="query_class_table_userId">学号</string>
    <string name="query_class_table_pwd">密码</string>
    <string name="query_class_table_start_year">学年</string>
    <string name="query_class_table_semester">学期</string>
    <string name="query_class_table_query_stat_title">查询状态</string>

    <!--settings-->

    <string name="setting_classtable_title">课程表</string>
    <string name="setting_classtable_now_week_key">setting_classtable_now_week</string>
    <string name="setting_classtable_now_week_first_week_start_date_key">setting_classtable_now_week_first_week_start_date</string>
    <string name="setting_classtable_now_week_title">当前周</string>
    <string name="setting_classtable_now_week_summary">设置当前是第几周</string>
    <string name="setting_classtable_show_weekends_key">setting_classtable_show_weekends_key</string>
    <string name="setting_classtable_show_weekends_title">显示周末</string>
    <string name="setting_classtable_show_weekends_summary">是否显示周末</string>

    <string name="setting_classtable_widget_title">Widget设置</string>
    <string name="setting_classtable_widget_text_color_title">字体颜色</string>
    <string name="setting_classtable_widget_text_color_summary">设置Widget的字体颜色</string>
    <string name="setting_classtable_widget_text_color_key">setting_classtable_widget_text_color_key</string>
    <string name="setting_classtable_widget_background_color_title">背景颜色</string>
    <string name="setting_classtable_widget_background_color_summary">设置Widget的背景颜色</string>
    <string name="setting_classtable_widget_background_color_key">setting_classtable_widget_background_color_key</string>

    <!--课程信息dialog-->
    <string name="dialog_class_info_course_name_hint">课程标题</string>
    <string name="dialog_class_info_course_name_short_hint">课程简称</string>
    <string name="dialog_class_info_address_hint">课程地址</string>
    <string name="dialog_class_info_teacher_name_hint">教师姓名</string>
    <string name="dialog_class_info_revise_button">修改</string>

    <!--ACTIVITY 编辑器-->
    <string name="activity_editor_subject_container_title">所属课程</string>
    <string name="activity_editor_subject_title">所属课程</string>
    <string name="activity_editor_activity_container_title">活动信息</string>
    <string name="activity_editor_short_table">标题</string>
    <string name="activity_editor_location">活动地点</string>
    <string name="activity_editor_background_color">背景颜色</string>
    <string name="activity_editor_is_class">是否是课程（与同课程的活动有联动）</string>
    <string name="activity_editor_time_container_title">时间</string>
    <string name="activity_editor_time_is_cycle_title">周期性</string>
    <string name="activity_editor_time_cycle_no_add_title">添加</string>
    <string name="activity_editor_no_subject_content">不依赖课程</string>

    <!--修改附加信息界面-->
    <string name="revise_class_additional_info_confirm">确认修改</string>

    <!--添加activity-->
    <string name="add_acty_toolbar_title">新建</string>


    <string name="action_settings">设置</string>
    <string name="appwidget_text">课程表</string>


    <!--导航标题-->
    <string name="nav_title_home">日程表</string>
    <string name="nav_title_exam">考试</string>
    <string name="nav_title_subject">课程纵览</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--other-->
    <string name="switch_on_yes">是</string>
    <string name="switch_off_no">否</string>
    <string name="dialog_positive">确认</string>
    <string name="dialog_cancel">取消</string>
</resources>
