<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/setting_classtable_title">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/setting_classtable_show_weekends_key"
            android:summary="@string/setting_classtable_show_weekends_summary"
            android:title="@string/setting_classtable_show_weekends_title" />
        <cn.ericweb.timetable.ericpref.PreferenceNowWeekNumberPicker
            android:defaultValue="1"
            android:key="@string/setting_classtable_now_week_key"
            android:summary="@string/setting_classtable_now_week_summary"
            android:title="@string/setting_classtable_now_week_title" />
    </PreferenceCategory>
</PreferenceScreen>
