<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_left_or_right"
    android:orientation="vertical">

    <TextView
        android:id="@+id/className"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_class_info_course_name_hint"
        android:padding="@dimen/padding_top_or_bottom" />

    <TextView
        android:id="@+id/shortClassName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_class_info_course_name_short_hint"
        android:padding="@dimen/padding_top_or_bottom" />

    <TextView
        android:id="@+id/classAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_class_info_address_hint"
        android:padding="@dimen/padding_top_or_bottom" />

    <TextView
        android:id="@+id/classTeacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_class_info_teacher_name_hint"
        android:padding="@dimen/padding_top_or_bottom" />
</LinearLayout>