<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="cn.ericweb.timetable.QueryClassTable">

    <android.support.v7.widget.Toolbar
        android:id="@+id/query_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/query_userId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/query_class_table_userId" />

        <EditText
            android:id="@+id/query_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/query_class_table_pwd"
            android:inputType="textPassword" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:hint="@string/query_class_table_start_year"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_width="0px" />
            <Button
                android:hint="@string/query_class_table_semester"
                android:layout_weight="1"
                android:layout_width="0px"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="queryClassTable"
            android:text="@string/query_class_table_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="本地数据的状态" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/classtable_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </ScrollView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="查询状态" />

            <TextView
                android:id="@+id/query_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
