<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:id="@+id/activity_editor_subject_container"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding_top_or_bottom"
                android:paddingLeft="@dimen/padding_left_or_right"
                android:paddingRight="@dimen/padding_left_or_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/acty_editor_item_height">
                    <TextView
                        android:textColor="@color/colorAccent"
                        android:text="@string/activity_editor_subject_container_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/activity_editor_subject_info_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/activity_editor_subject_title_container"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acty_editor_item_height">
                        <TextView
                            android:text="@string/activity_editor_subject_title"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="8dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/activity_editor_subject_title_content"
                            android:textAlignment="textEnd"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="@dimen/padding_left_or_right"
                android:paddingLeft="@dimen/padding_left_or_right">

                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/acty_editor_item_height">
                    <TextView
                        android:textColor="@color/colorAccent"
                        android:text="@string/activity_editor_activity_container_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/activity_editor_acty_info_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/activity_editor_acty_title_container"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acty_editor_item_height">
                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_editor_short_table" />
                        <TextView
                            android:layout_width="8dp"
                            android:layout_height="match_parent" />

                        <EditText
                            android:id="@+id/activity_editor_acty_title_content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="3" />

                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/activity_editor_acty_location_container"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acty_editor_item_height">
                        <TextView
                            android:text="@string/activity_editor_location"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                        <TextView
                            android:layout_width="8dp"
                            android:layout_height="match_parent" />
                        <EditText
                            android:id="@+id/activity_editor_acty_location_content"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/activity_editor_acty_is_class_container"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acty_editor_item_height"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_editor_is_class" />

                        <Switch
                            android:id="@+id/activity_editor_acty_is_class_content"
                            android:layout_gravity="center_vertical|end"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/activity_editor_acty_background_color_container"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acty_editor_item_height"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_editor_background_color" />
                        <TextView
                            android:layout_width="8dp"
                            android:layout_height="match_parent" />

                        <TextView
                            android:id="@+id/activity_editor_acty_background_color_content"
                            android:layout_weight="3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_editor_acty_time_father"
                android:paddingRight="@dimen/padding_left_or_right"
                android:paddingLeft="@dimen/padding_left_or_right"
                android:paddingBottom="@dimen/padding_top_or_bottom"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/acty_editor_item_height">
                    <TextView
                        android:textColor="@color/colorAccent"
                        android:text="@string/activity_editor_time_container_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/activity_editor_acty_time_container"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:id="@+id/activity_editor_acty_time_iscycle_container"
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/acty_editor_item_height"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/activity_editor_time_is_cycle_title" />

                        <Switch
                            android:id="@+id/activity_editor_acty_time_iscycle_content"
                            android:layout_gravity="center_vertical|end"
                            android:textOn="@string/switch_on_yes"
                            android:textOff="@string/switch_off_no"
                            android:layout_width="64dp"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/activity_editor_acty_time_cycle_no_container"
                        android:background="@drawable/eric_border"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:id="@+id/activity_editor_acty_time_cycle_no_add_container"
                            android:background="@color/colorBorderGrey"
                            android:orientation="horizontal"
                            android:gravity="center_vertical"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/acty_editor_item_height">
                            <TextView
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />
                            <ImageButton
                                android:id="@+id/activity_editor_acty_time_cycle_no_add_button"
                                android:background="@color/colorApparent"
                                android:src="@drawable/ic_add_black_48dp"
                                android:layout_width="48dp"
                                android:layout_height="24dp" />
                        </LinearLayout>
                        <ListView
                            android:id="@+id/activity_editor_acty_time_cycle_no_list"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        </ListView>
                    </LinearLayout>
                    <LinearLayout
                        android:visibility="invisible"
                        android:id="@+id/activity_editor_acty_time_cycle_yes_container"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_gravity="center"
                            android:text="周期性创建课程开发中"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>